<resources>
    <string name="app_name">C-Style</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Settings</string>
    <string name="logout">Log Out</string>
    <string name="userName">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="firstName">First Name</string>
    <string name="signup">SIGN UP</string>
    <string name="lastName">Last Name</string>
    <string name="userFirstName">UserFirstName</string>
    <string name="userLastName">UserLastName</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="userPhoneNumber">UserPhoneNumber</string>
    <string name="editProfile">Edit Profile</string>
    <string name="additem">Add Item</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="itemName">Item Name</string>
    <string name="size">Size</string>
    <string name="Color">Color</string>
    <string name="title">Title</string>
    <string name="dialog_color_title">Color</string>
    <string name="dialog_color_done">Pick Color</string>
    <string name="closet">Closet</string>
    <string name="favorites">Favorites</string>
    <string name="Calender">Calender</string>
    <string name="Outfits">Outfits</string>
    <string name="favorite">Favorite</string>
    <string name="Name">Name</string>
    <string name="itemCategory">Item Category</string>
    <string name="itemSize">Item Size</string>
    <string name="outfitName">Outfit Name</string>
    <string name="itemColor">Item Color</string>
    <string name="addoutfit">Add Outfit</string>
    <string name="Accessory">Accessory</string>
    <string name="Bag">Bag</string>
    <string name="Coat">Coat</string>
    <string name="Top">Top</string>
    <string name="Bottom">Bottom</string>
    <string name="Shoes">Shoes</string>
    <string name="color">Color</string>

</resources>