<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     >

    <group android:checkableBehavior="single">


    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_person"
        android:iconTint="@drawable/bottom_item_background"
        android:title="@string/profile"
        />



        <item
            android:id="@+id/closest"
            android:title="@string/closet"
            android:icon="@drawable/ic_hanger"
            android:iconTint="@drawable/bottom_item_background"
            />

        <item
            android:id="@+id/outfits"
            android:title="@string/Outfits"
            android:icon="@drawable/ic_outfit"
            android:iconTint="@drawable/bottom_item_background"

            />

        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorite"
            android:iconTint="@drawable/bottom_item_background"
            />


    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:iconTint="@drawable/bottom_item_background"
        android:icon="@drawable/ic_exit"
        />


    </group>

</menu>