<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fregments.ProfileFragment"
    android:orientation="vertical"
    android:background="@color/style2">



    <LinearLayout
        android:id="@+id/Panel_ProfilePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/panel_LBL_Title"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/profile"-->
<!--            android:textColor="@color/style4"-->
<!--            android:textStyle="bold"-->
<!--            android:fontFamily="@font/abeezee"-->
<!--            android:textSize="24sp" />-->

        <LinearLayout
            android:id="@+id/Profile_TopProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Profile_IMG_User"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/ic_account"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Profile_LBL_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="@color/style4"
                android:fontFamily="@font/abeezee"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/style4"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/Profile_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="@color/style4"
                android:fontFamily="@font/abeezee"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Profile_LBL_UserFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userFirstName"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/abeezee"
                android:textSize="18dp"
                android:textColor="@color/style1"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/style1"
            />


        <LinearLayout
            android:id="@+id/Profile_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="@color/style4"
                android:fontFamily="@font/abeezee"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Profile_LBL_UserLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/userLastName"
                android:textColor="@color/style1"
                android:textSize="18dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/style1"
            />

        <LinearLayout
            android:id="@+id/Profile_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"
                android:textColor="@color/style4"
                android:fontFamily="@font/abeezee"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Profile_LBL_UserPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPhoneNumber"
                android:layout_marginStart="26dp"
                android:fontFamily="@font/abeezee"
                android:textSize="18dp"
                android:textColor="@color/style1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/style1"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/Profile_BTN_EditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="90dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/style4"
            android:scaleType="fitCenter"
            app:icon="@drawable/ic_edit"
            android:text="@string/editProfile"
            android:fontFamily="@font/abeezee"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick"
            />




    </LinearLayout>
</FrameLayout>