<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity"
    android:padding="20dp"
    android:background="@color/style2">

    <ScrollView
        android:id="@+id/newOutfit_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/signUp_BTN_SignUp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/signUp_IMG_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/img_icon_cstyle_brown" />


        <TextView
            android:id="@+id/signUp_LBL_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_IMG_icon"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/signup"
            android:textColor="@color/style4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUp_LBL_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_LBL_SignUp"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/abeezee"
            android:text="SignUp to start organize your closet"
            android:textColor="@color/style4"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_LBL_Txt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signUp_BTN_User_Image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/panel_LBL_txt"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_account"
                app:civ_border_color="@color/style4"
                app:civ_border_width="3dp"></de.hdodenhof.circleimageview.CircleImageView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_TIL_User_First_Name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/panel_BTN_User_Image"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/abeezee"
                android:hint="@string/firstName"
                android:textColorHint="@color/style1"
                app:boxStrokeColor="@color/style4"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintTextColor="@color/style4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_TIET_User_First_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="30"
                    android:fontFamily="@font/abeezee"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:outlineAmbientShadowColor="@color/style1"
                    android:shadowColor="@color/white"
                    android:textColor="@color/style1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_TIL_User_Last_Name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/panel_LBL_User_First_Name"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/abeezee"
                android:hint="@string/lastName"
                android:textColorHint="@color/style1"
                app:boxStrokeColor="@color/style4"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintTextColor="@color/style4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_TIET_User_Last_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="30"
                    android:fontFamily="@font/abeezee"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:outlineAmbientShadowColor="@color/style1"
                    android:shadowColor="@color/white"
                    android:textColor="@color/style1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_BTN_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/style4"
        android:fontFamily="@font/abeezee"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>